# BindCraft-uv

./: bindcraft.slurm  install_bindcraft_uv.sh  pyproject.toml
settings_advanced/: default_4stage_multimer.json
